--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -44,11 +44,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:text="@string/editview_task_lable"/>
         <EditText
             android:id="@+id/editview_taskname_et"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="请输入任务名称" />
     </LinearLayout>
 
     <LinearLayout
@@ -57,11 +59,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:text="@string/editview_times_lable"/>
         <EditText
             android:id="@+id/editview_times_et"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="请输入任务需要完成的次数" />
     </LinearLayout>
 
     <LinearLayout
@@ -70,11 +74,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:text="@string/editview_time_lable"/>
         <EditText
             android:id="@+id/editview_time_et"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="请输入任务需要完成的时间" />
     </LinearLayout>
 
     <LinearLayout
@@ -83,11 +89,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:text="@string/editview_note_lable"/>
         <EditText
             android:id="@+id/editview_note_et"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="请输入备注信息"/>
     </LinearLayout>
 
 </LinearLayout>
